Fixed the align erron on the Story page

--- a/app/styles/patterns.scss
+++ b/app/styles/patterns.scss
@@ -108,7 +108,7 @@
     min-height: 100px;
     overflow: hidden;
     background-color: #fff;
-    margin:0 auto 20px;
+    margin:0;
     color: #797984;
     border: 1px solid #eeeeee;
       .storyblock {
